# kazlauskas.me

./: .gitignore  Compilers.hs  Configuration.hs  Contexts.hs  LICENCE  LICENSE  Templates.hs  Utils.hs  _headers  _redirects  build.sh  default.nix  deploy.py  fly.toml  glyphs.py  hyphenation.nix  index.html  kazlauskas.cabal  kazlauskas.me.conf  kazlauskas.nix  nginx.conf  pgp.md  redirects.conf  shell.nix  site.hs
.github/workflows/: build.yml  deploy.yml
Templates/: Base.hs  Entry.hs  Internal.hs
css/: sandwich.css  style.css
data/: Hrstc-B.eot  Hrstc-BI.eot  Hrstc-I.eot  Hrstc-R.eot  sandwich.10.css  sandwich.11.css  sandwich.12.css  sandwich.13.css  sandwich.14.css  sandwich.15.css  sandwich.16.css  sandwich.17.css  sandwich.18.css  sandwich.2.css  sandwich.3.css  sandwich.4.css  sandwich.5.css  sandwich.6.css  sandwich.7.css  sandwich.9.css  sandwich.css  site.2.js  site.3.js  site.js
data/pgp/: key.sig
data/tweets/: index.html
data/tweets/data/js/: payload_details.js  tweet_index.js  user_details.js
data/tweets/data/js/tweets/: 2011_02.js  2011_03.js  2011_04.js  2011_05.js  2011_06.js  2011_07.js  2011_08.js  2011_09.js  2011_10.js  2011_11.js  2011_12.js  2012_01.js  2012_02.js  2012_03.js  2012_04.js  2012_05.js  2012_06.js  2012_07.js  2012_08.js  2012_09.js  2012_10.js  2012_11.js  2012_12.js  2013_01.js  2013_02.js  2013_03.js  2013_04.js  2013_05.js  2013_06.js  2013_07.js
entries/: 1-aranging-ducks.md  1-arranging-ducks.md  10w-n100-server.mkd  2-a-case-against-tabs.md  2020-rust.mkd  3-hyphenation-hints-and-justification.md  a-case-against-tabs.md  a-case-against-tabs.mkd  arranging-ducks.md  arranging-ducks.mkd  black-magic-driven-development.mkd  browsing-without-useragent.md  browsing-without-useragent.mkd  comments-are-welcome-by-mail.md  comments-are-welcome-by-mail.mkd  due-to-borrowck-limitations.mkd  dysfunctional-systems.mkd  errors.mkd  fast-page-maps-for-jit.mkd  figuring-out-the-nuvoton-superio-more.md  hyphenation-hints-and-justification.md  hyphenation-hints-and-justification.mkd  i-reverse-engineered-a-motherboard.mkd  lets-encrypt.mkd  liquidsoap.mkd  midori-shoujo-tsubaki.mkd  mobile-design-the-viewport.mkd  recovering-digitalocean-kernel-change.mkd  renewable-energy-is-not-renewable.md  renewable-fallacy.md  renewable-fallacy.mkd  rust-embedded-ready.mkd  sunrider-mask-of-arcadius.mkd  tailscale-doesnt-quite-suck.mkd  the-road-to-bestest-optimiser.mkd  what-makes-align-to-work.mkd  when-droplets-go-missing.mkd  writing-proper-buildrs-scripts.mkd  x64-uefi-os-1.mkd  you-have-no-right.md  (+1 more)
entries/h/: dysfunctional-systems-2.md  dysfunctional-systems-2.mkd
pages/: 404.html  about-contact.html  index.html  index.md  pgp.md
posts/: 1-aranging-ducks.md
src/: Compilers.hs  Configuration.hs  Contexts.hs  Kazlauskas.hs  Templates.hs  Utils.hs  make-it-woff2
src/Templates/: Base.hs  Entry.hs
templates/: base.html  entries.html  entry-item.html  entry-list.html  entry-no-toc.html  entry.html  index.html  post-item.html  post.html  posts.html
