name:                kazlauskas
version:             0.4.0.0
synopsis:            My hakyll blog
-- description:
homepage:            http://kazlauskas.me
license:             MIT
license-file:        LICENCE
author:              Simonas Kazlauskas
maintainer:          web@kazlauskas.me
-- copyright:
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable kazlauskas
  hs-source-dirs:      src
  main-is:             Kazlauskas.hs
  ghc-options:         -rtsopts -threaded
  -- other-modules:
  build-depends: base == 4.8.*
               , hakyll >= 4.7.0.0 && < 4.8
               , bytestring == 0.10.*
               , hyphenation == 0.5.*
               , hjsmin == 0.1.*
               , pandoc == 1.15.*
               , pandoc-types == 1.12.*
               , binary == 0.7.*
               , xml == 1.3.*
               , containers == 0.5.*
               , time == 1.5.*
               , tagsoup == 0.13.*
