name:                kazlauskas
version:             0.4.0.0
synopsis:            My hakyll blog
-- description:
homepage:            http://kazlauskas.me
license:             MIT
license-file:        LICENCE
author:              Simonas Kazlauskas
maintainer:          web@kazlauskas.me
-- copyright:
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable kazlauskas
  hs-source-dirs:      src
  main-is:             Kazlauskas.hs
  ghc-options:         -rtsopts -threaded
  -- other-modules:
  build-depends: base >= 4.8 && < 5.0
               , hakyll >= 4.9.0.0 && < 4.16
               , bytestring == 0.10.*
               , hyphenation >= 0.7 && <= 0.9
               , hjsmin == 0.2.*
               , pandoc >= 1.14 && < 2.18
               , pandoc-types >= 1.17 && <= 1.23
               , binary == 0.8.*
               , xml == 1.3.*
               , containers >= 0.3 && < 0.7
               , time >= 1.4 && < 1.14
               , tagsoup >= 0.13.1 && < 0.15
               , text >=0.11 && <1.3
